[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.0", features = [ "dialog-save", "dialog-ask", "dialog-message", "dialog-open", "dialog"] }
pcap = "1.3.0"
pnet = "0.34.0"
chrono = "0.4.37"

[lib]
path = "./src/lib.rs"
[features]
custom-protocol = [ "tauri/custom-protocol" ]
