[package]
name = "PacketHunter"
version = "1.0.3"
description = "A Network Packet Capture Tool Based on Rust and Tauri" 
authors = ["ink-carp"]
license = ""
repository = "github.com/ink-carp/PacketHunter"
default-run = "PacketHunter"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
pcap = "1.3.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = [ "dialog-save", "dialog-ask", "dialog-message", "dialog-open", "dialog"]  }
pnet = "0.34.0"
chrono = "0.4.37"
lazy_static = "1.4.0"

[lib]
path = "./src/lib.rs"
[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
strip = true # Remove debug symbols
opt-level = "s" # Optimize for binary size
